beautify file + attraction1.jpg gelöscht

--- a/nz/index.html
+++ b/nz/index.html
@@ -1,64 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device.width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto+Condensed:ital@0;1&display=swap" rel="stylesheet"> 
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device.width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto+Condensed:ital@0;1&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>NZJ: Picton</title>
 </head>
-<body>
-<header>
-<img class="banner" src="images/header.jpg" alt="Picton Harbour">
-    <p><a class="white" href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"> <i class="fas fa-camera mr-3"></i>Kiwi Sonja</a></p>
-    <h1>New Zealand Journey: Picton/Waitohi</h1>
-    <nav>
-    <img src="images/user.jpg" alt="Picton">
-       <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
-       target="_blank"></a>
-       <address>
-        <a href="https://www.instagram.com/dontstealmyspots_/" target="_blank"><i class="fab fa-instagram mr-3"></i>Instagram</a> - 
-        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square mr-3"></i>Mail</a>  -
-        <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i class="fab fa-github mr-3"></i>Github Repos</a>
-        </address>
-    </nav>
-</header>
-<hr>
-<main>
-<h1>Picton - A Pearl of New Zealand</h1>
-<p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area. Picton is a major hub in New Zealand's transport network, connecting the South Island road and rail network with ferries across Cook Strait to Wellington and the North Island. The Picton urban area has a population of 4,730 (June 2020), making it the second-largest town in the Marlborough Region behind Blenheim. It is the easternmost town in the South Island with a population of at least 1,000 people. 
-(Source: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
-<h2>Picton Harbour</h2>
-<figure> 
-    <img src="images/attraction.jpg" 
-    alt="Picton Harbour">
-<figcaption><i class="fas fa-camera mr-3"></i><strong>Overview of Picton Harbour Picture:</strong>
-    <a href="https://commons.wikimedia.org/wiki/File:Picton_Harbour_(6724479431).jpg" target="_blank">Sid Mosdell</a></figcaption>
-</figure>
-<p>
-Picton Harbor is a natural harbor in the Marlborough District on the South Island of New Zealand. Picton Harbor is located between Queen Charlotte Sound and Picton, which is the end point of the natural harbor. The elongated body of water has a north-northeast orientation and, including the marina, is around 2.4 km long, with a maximum width of around 700 m and an approximately 750 m wide port entrance. The coastline extends for around 6.2 km. Around 250 m in front of the port entrance is the 128 m × 85 m large Mabel Island, which must be taken into account when entering the natural harbor.
-(Source: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2" target="_blank">Wikipedia</a>)
-</p>
-<h3>Overview Map</h3>
-<div id="map" ></div>
-<h3>Links</h3>
-<ul>
-<li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li> 
-<li><a href="https://www.portmarlborough.co.nz/">Piction Harbour</a></li>
-<li><a href="https://www.lonelyplanet.com/new-zealand/marlborough-and-nelson/picton">Lonelyplanet</a></li>
-<li><a href="https://www.tripadvisor.com/ShowForum-g285728-i10671-Picton_Marlborough_Region_South_Island.html">TripAdvisor</a></li>
-</ul>
-<hr>
-</main>
-<footer> 
-<nav>
-<a class="back" href="https://elisakuntner.github.io/nz/"> <i class="fas fa-long-arrow-alt-left mr-3"></i>Abel Tasman National Park </a>
-<a class="next" href="https://geo6371.github.io/nz/">Wellington<i class="fas fa-long-arrow-alt-right ml-3"></i> </a>
-</nav>
-</footer>
-</body>
-</html>
 
+<body>
+    <header>
+        <img class="banner" src="images/header.jpg" alt="Picton Harbour">
+        <p><a class="white" href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"> <i
+                    class="fas fa-camera mr-3"></i>Kiwi Sonja</a></p>
+        <h1>New Zealand Journey: Picton/Waitohi</h1>
+        <nav>
+            <img src="images/user.jpg" alt="Picton">
+            <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
+                target="_blank"></a>
+            <address>
+                <a href="https://www.instagram.com/dontstealmyspots_/" target="_blank"><i
+                        class="fab fa-instagram mr-3"></i>Instagram</a> -
+                <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i
+                        class="fas fa-envelope-square mr-3"></i>Mail</a> -
+                <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i
+                        class="fab fa-github mr-3"></i>Github Repos</a>
+            </address>
+        </nav>
+    </header>
+    <hr>
+    <main>
+        <h1>Picton - A Pearl of New Zealand</h1>
+        <p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town
+            is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km
+            (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part
+            of the Picton urban area. Picton is a major hub in New Zealand's transport network, connecting the South
+            Island road and rail network with ferries across Cook Strait to Wellington and the North Island. The Picton
+            urban area has a population of 4,730 (June 2020), making it the second-largest town in the Marlborough
+            Region behind Blenheim. It is the easternmost town in the South Island with a population of at least 1,000
+            people.
+            (Source: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
+        <h2>Picton Harbour</h2>
+        <figure>
+            <img src="images/attraction.jpg" alt="Picton Harbour">
+            <figcaption><i class="fas fa-camera mr-3"></i><strong>Overview of Picton Harbour Picture:</strong>
+                <a href="https://commons.wikimedia.org/wiki/File:Picton_Harbour_(6724479431).jpg" target="_blank">Sid
+                    Mosdell</a></figcaption>
+        </figure>
+        <p>
+            Picton Harbor is a natural harbor in the Marlborough District on the South Island of New Zealand. Picton
+            Harbor is located between Queen Charlotte Sound and Picton, which is the end point of the natural harbor.
+            The elongated body of water has a north-northeast orientation and, including the marina, is around 2.4 km
+            long, with a maximum width of around 700 m and an approximately 750 m wide port entrance. The coastline
+            extends for around 6.2 km. Around 250 m in front of the port entrance is the 128 m × 85 m large Mabel
+            Island, which must be taken into account when entering the natural harbor.
+            (Source: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2"
+                target="_blank">Wikipedia</a>)
+        </p>
+        <h3>Overview Map</h3>
+        <div id="map"></div>
+        <h3>Links</h3>
+        <ul>
+            <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li>
+            <li><a href="https://www.portmarlborough.co.nz/">Piction Harbour</a></li>
+            <li><a href="https://www.lonelyplanet.com/new-zealand/marlborough-and-nelson/picton">Lonelyplanet</a></li>
+            <li><a
+                    href="https://www.tripadvisor.com/ShowForum-g285728-i10671-Picton_Marlborough_Region_South_Island.html">TripAdvisor</a>
+            </li>
+        </ul>
+        <hr>
+    </main>
+    <footer>
+        <nav>
+            <a class="back" href="https://elisakuntner.github.io/nz/"> <i
+                    class="fas fa-long-arrow-alt-left mr-3"></i>Abel Tasman National Park </a>
+            <a class="next" href="https://geo6371.github.io/nz/">Wellington<i
+                    class="fas fa-long-arrow-alt-right ml-3"></i> </a>
+        </nav>
+    </footer>
+</body>
+
+</html>
