--- a/nz/index.html
+++ b/nz/index.html
@@ -11,6 +11,10 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto+Condensed:ital@0;1&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet-src.min.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"><</script>
     <title>NZJ: Picton</title>
 </head>
 
@@ -30,7 +34,7 @@
                 <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i
                         class="fas fa-envelope-square mr-3"></i>Mail</a> -
                 <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i
-                        class="fab fa-github mr-3"></i>Github Repos</a>
+                        class="fab fa-github mr-3"></i>Github Repos</a>  
             </address>
         </nav>
     </header>
