--- a/nz/index.html
+++ b/nz/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet-src.min.js">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"><</script>
+    <script src="main.js"></script>
     <title>NZJ: Picton</title>
 </head>
 
