--- a/nz/index.html
+++ b/nz/index.html
@@ -70,6 +70,8 @@
         </p>
         <h3>Overview Map</h3>
         <div id="map"></div>
+        <label for="navigation">route navigation:</label>
+        <select id="navigation"></select>
         <h3>Links</h3>
         <ul>
             <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li>
