erster eintrag pulldown menu

--- a/nz/index.html
+++ b/nz/index.html
@@ -71,7 +71,9 @@
         <h3>Overview Map</h3>
         <div id="map"></div>
         <label for="navigation">route navigation:</label>
-        <select id="navigation"></select>
+        <select id="navigation">
+            <option value="maximilianender">Picton</option>
+        </select>
         <h3>Links</h3>
         <ul>
             <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li>
