--- a/aws-tirol/index.html
+++ b/aws-tirol/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wetterstationen in Tirol</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
+    <h2>Wetterstationen in Tirol</h2>
     <div id="map"></div>
 </body>
 </html>
