buslinien farbig angepasst

--- a/wien/index.html
+++ b/wien/index.html
@@ -24,6 +24,9 @@
     <!-- OGD-Wien Datenobjekt -->
     <script src="ogdwien.js"></script>
 
+    <!--Farbdefinitionen-->
+    <script src="colors.js"></script>
+
     <!-- Kartenscript -->
     <script defer src="main.js"></script>
 
