--- a/tirol/tirol_template/index.html
+++ b/tirol/tirol_template/index.html
@@ -23,7 +23,11 @@
 
     <!-- Leaflet GPX -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.5.1/gpx.min.js"></script>
-    
+
+    <!-- Leaflet Elevation -->
+    <link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
+    <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.js"></script>
+
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
 </head>
