etappentitel mir spanelemeten schreiben

--- a/tirol/index.html
+++ b/tirol/index.html
@@ -38,7 +38,7 @@
         <i class="logo fas fa-biking fa-2x"></i> <a href="https://www.tirol.at/reisefuehrer/sport/mountainbiken/bike-trail-tirol">MTB-Rundkurs „Bike Trail Tirol“</a>
     </header>
     <main>
-        <h2 id="etappe">Bike Trail Tirol</h2>
+        <h2> Etappe <span id="nr"></span>: </span> <span id="etappe"></spanid></span>Bike Trail Tirol</h2>
         <p>Der „Bike Trail Tirol“ ist der längste zusammenhängende Mountainbike-Rundkurs der Alpen und führt auf 32 Etappen, 1.000 Kilometern und 27.000 Höhenmetern durch die vielfältigen Regionen des Landes. Der Aufbau des Rundkurses erlaubt dabei die freie Wahl von Start- und Zielpunkt. Ob ein- oder mehrtägige Rundtouren: Am „Bike Trail Tirol“ wartet auf jeden die passende Tour.</p>
         
         <select id="pulldown"></select>
