etappen eigenschaften eingefügt

--- a/tirol/index.html
+++ b/tirol/index.html
@@ -39,7 +39,15 @@
     </header>
     <main>
         <h2> Etappe <span id="nr"></span>: </span> <span id="etappe"></spanid></span>Bike Trail Tirol</h2>
-        <p>Der „Bike Trail Tirol“ ist der längste zusammenhängende Mountainbike-Rundkurs der Alpen und führt auf 32 Etappen, 1.000 Kilometern und 27.000 Höhenmetern durch die vielfältigen Regionen des Landes. Der Aufbau des Rundkurses erlaubt dabei die freie Wahl von Start- und Zielpunkt. Ob ein- oder mehrtägige Rundtouren: Am „Bike Trail Tirol“ wartet auf jeden die passende Tour.</p>
+        <p id="intro">Der „Bike Trail Tirol“ ist der längste zusammenhängende Mountainbike-Rundkurs der Alpen und führt auf 32 Etappen, 1.000 Kilometern und 27.000 Höhenmetern durch die vielfältigen Regionen des Landes. Der Aufbau des Rundkurses erlaubt dabei die freie Wahl von Start- und Zielpunkt. Ob ein- oder mehrtägige Rundtouren: Am „Bike Trail Tirol“ wartet auf jeden die passende Tour.</p>
+        <ul>
+            <li>Start: <span id="start"></span></li>
+            <li>Länge: <span id="laenge"></span></li>
+            <li>Höhenmeter: <span id="hoehenmeter"></span></li>
+            <li>Fahrzeit: <span id="fahrzeit"></span></li>
+            <li>Schwierigkeit: <span id="grad"></span></li>
+            <li>Weblink: <span id="weblink"></span></li>
+        </ul>
         
         <select id="pulldown"></select>
         <div id="map"></div>
