--- a/tirol/index.html
+++ b/tirol/index.html
@@ -46,7 +46,7 @@
             <li>Höhenmeter: <span id="hoehenmeter"></span></li>
             <li>Fahrzeit: <span id="fahrzeit"></span></li>
             <li>Schwierigkeit: <span id="grad"></span></li>
-            <li>Weblink: <span id="weblink"></span></li>
+            <li>Weblink: <span id="homepage"></span></li>
         </ul>
         
         <select id="pulldown"></select>
