--- a/tirol/index.html
+++ b/tirol/index.html
@@ -52,7 +52,9 @@
         <select id="pulldown"></select>
         <div id="map"></div>
         <div id="profile"></div>
-
+        
+        <h3>Streckenbeschreibung</h3>
+        <p id="strecke"></p>
     </main>
 
 </body>
